--- a/src/resources/default.css
+++ b/src/resources/default.css
@@ -1,8 +1,8 @@
 .root {
     -fx-font-size: 14pt;
-    -fx-font-family: "Courier New";
+    -fx-font-family: "Comic Sans MS";
     -fx-base: rgb(132, 145, 47);
-    -fx-background: rgb(225, 228, 203);
+    -fx-background: rgb(0,255,0);
 }
 
 .button {
@@ -19,7 +19,7 @@
 
 .combo-box-base {
     -fx-text-base-color: #006464;
-    -fx-background-color: #DFB951;
+    -fx-background-color: rgb(205,92,92);
     -fx-border-radius: 20;
     -fx-background-radius: 20;
 }
